Bug 327170 - Executable: kdeinit4 PID: 4365 Signal: Segmentation fault (11)
Summary: Executable: kdeinit4 PID: 4365 Signal: Segmentation fault (11)
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: libkscreen (other bugs)
Version First Reported In: 1.0.1
Platform: Mint (Ubuntu based) Other
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 330682 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-05 13:42 UTC by Macca
Modified: 2014-03-01 11:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.2
Sentry Crash Report:


Attachments
txt report (4.51 KB, text/plain)
2013-11-05 13:46 UTC, Macca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Macca 2013-11-05 13:42:21 UTC
After the xRDP (vnc) session connects and the x session has started then the crash GUI pops up and you are not able to use the mouse inside any GUI's after that.  You can start an application but once started you can not interact with the applications GUI.


Reproducible: Always

Steps to Reproduce:
1. installed vnc4server then xrdp on linux mint 15
2. connected via remote desktop connection from win7 to limux mint 15 and process dies once session loaded

Actual Results:  
crash report is displayed

Expected Results:  
you can use the xRDP session to start any GUI and then interact with the GUI's.

Application: KDE Daemon (kdeinit4), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#5  0x00007f1168115f27 in XRandR11::config (this=<optimized out>) at /build/buildd/libkscreen-1.0.1/backends/xrandr1.1/xrandr11.cpp:93
#6  0x00007f11687677a5 in KScreenDaemon::monitorConnectedChange (this=this@entry=0x1d89600) at /build/buildd/kscreen-1.0.1/kded/daemon.cpp:195
#7  0x00007f11687684e9 in KScreenDaemon::KScreenDaemon (this=0x1d89600, parent=<optimized out>) at /build/buildd/kscreen-1.0.1/kded/daemon.cpp:72
#8  0x00007f1168768b57 in KPluginFactory::createInstance<KScreenDaemon, QObject> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/KDE/../kpluginfactory.h:477
#9  0x00007f11838dba25 in KPluginFactory::create(char const*, QWidget*, QObject*, QList<QVariant> const&, QString const&) () from /usr/lib/libkdecore.so.5
#10 0x00007f116ef315db in ?? () from /usr/lib/kde4/libkdeinit/libkdeinit4_kded4.so
#11 0x00007f116ef32507 in ?? () from /usr/lib/kde4/libkdeinit/libkdeinit4_kded4.so
#12 0x00007f116ef342c1 in ?? () from /usr/lib/kde4/libkdeinit/libkdeinit4_kded4.so
#13 0x00007f1184105442 in ?? () from /usr/lib/libkdeui.so.5
#14 0x00007f11841054c4 in ?? () from /usr/lib/libkdeui.so.5
#15 0x00007f11841055fb in ?? () from /usr/lib/libkdeui.so.5
#16 0x00007f118070c063 in QDBusConnectionPrivate::deliverCall (this=this@entry=0x1b90c70, object=object@entry=0x1d103e0, msg=..., metaTypes=..., slotIdx=4) at qdbusintegrator.cpp:951
#17 0x00007f118070c886 in QDBusConnectionPrivate::activateCall (this=this@entry=0x1b90c70, object=0x1d103e0, flags=flags@entry=337, msg=...) at qdbusintegrator.cpp:856
#18 0x00007f118070d2cf in QDBusConnectionPrivate::activateObject (this=0x1b90c70, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1427
#19 0x00007f118070d3ab in QDBusActivateObjectEvent::placeMetaCall (this=0x1d236a0) at qdbusintegrator.cpp:1541
#20 0x00007f11833925be in QObject::event (this=this@entry=0x7fff83dc1270, e=e@entry=0x1d236a0) at kernel/qobject.cpp:1194
#21 0x00007f118337cf8c in QCoreApplication::event (this=this@entry=0x7fff83dc1270, e=e@entry=0x1d236a0) at kernel/qcoreapplication.cpp:1758
#22 0x00007f1182723314 in QApplication::event (this=0x7fff83dc1270, e=0x1d236a0) at kernel/qapplication.cpp:2549
#23 0x00007f118271b8ec in QApplicationPrivate::notify_helper (this=this@entry=0x1ba09f0, receiver=receiver@entry=0x7fff83dc1270, e=e@entry=0x1d236a0) at kernel/qapplication.cpp:4567
#24 0x00007f118271e25b in QApplication::notify (this=0x7fff83dc1270, receiver=0x7fff83dc1270, e=0x1d236a0) at kernel/qapplication.cpp:4428
#25 0x00007f11841021a6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#26 0x00007f118337863e in QCoreApplication::notifyInternal (this=0x7fff83dc1270, receiver=receiver@entry=0x7fff83dc1270, event=event@entry=0x1d236a0) at kernel/qcoreapplication.cpp:946
#27 0x00007f118337c171 in sendEvent (event=0x1d236a0, receiver=0x7fff83dc1270) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1b02150) at kernel/qcoreapplication.cpp:1570
#29 0x00007f118337c4a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#30 0x00007f11833a6e83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#31 postEventSourceDispatch (s=0x1b9efc0) at kernel/qeventdispatcher_glib.cpp:279
#32 0x00007f117f070f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f117f071248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f117f071304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007f11833a7016 in QEventDispatcherGlib::processEvents (this=0x1b04670, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#36 0x00007f11827c113e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#37 0x00007f118337738f in QEventLoop::processEvents (this=this@entry=0x7fff83dc0ff0, flags=...) at kernel/qeventloop.cpp:149
#38 0x00007f1183377618 in QEventLoop::exec (this=this@entry=0x7fff83dc0ff0, flags=...) at kernel/qeventloop.cpp:204
#39 0x00007f118337ccf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#40 0x00007f116ef31050 in kdemain () from /usr/lib/kde4/libkdeinit/libkdeinit4_kded4.so
#41 0x00000000004084ea in _start ()
Comment 1 Macca 2013-11-05 13:46:14 UTC
Created attachment 83354 [details]
txt report
Comment 2 Alex Fiestas 2013-11-13 16:39:42 UTC
Could you please attach the output of 
kscreen-console bug ?

Thanks !
Comment 3 Alex Fiestas 2013-11-13 16:44:09 UTC
Before executing the command, make sure to execute "kdebugdialog" and enable all options called "kscreen" or containing "randr".

Thanks !
Comment 4 Alex Fiestas 2013-11-13 17:06:26 UTC
Git commit 077fc9d9e16611e8fc36993eec9585de5224030a by Àlex Fiestas.
Committed on 13/11/2013 at 17:04.
Pushed by afiestas into branch 'master'.

Handle a possible error when we query for XRandR version.
FIXED-IN: 1.0.2

M  +5    -2    backends/xrandr1.1/xrandr11.cpp

http://commits.kde.org/libkscreen/077fc9d9e16611e8fc36993eec9585de5224030a
Comment 5 Jekyll Wu 2014-02-03 09:45:59 UTC
*** Bug 330682 has been marked as a duplicate of this bug. ***