Handle a possible error when we query for XRandR version.

BUG: 327170
FIXED-IN: 1.0.2